--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=/st/
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:coaFrT/8U9vQFgl8qRum1hdWVqr3pMrTf5MoezN3aCE=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
@@ -30,9 +30,10 @@ DB_CONNECTION=sqlite
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
+SESSION_ENCRYPT=true
 SESSION_PATH=/
 SESSION_DOMAIN=null
+SESSION_SECURE_COOKIE=true
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
